Retrieve active DC API transaction response object (#601)
